fix buttons on mobile

--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -61,6 +61,10 @@
     width: 10rem;
 }
 
+.yellowBtn:visited {
+    color: black;
+}
+
 .yellowBtn:hover {
     background: yellow;
 }
