--- a/src/components/Patents/patents.css
+++ b/src/components/Patents/patents.css
@@ -24,6 +24,10 @@
     font-size: 1rem;
 }
 
+.seeMoreBtn:visited {
+    color: black;
+}
+
 .seeMoreBtn:hover {
     background: yellow;
 }
